--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -13,7 +13,7 @@
 			here is the about page. <br />
 			<strong>This tutorial has been put together by Barbora-Barancikova. </strong></br />
 		</div>
-
+		<p>Visits: {{ visits }}</p>
 		<div>
 			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 
